--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 		
 		<link href="./_app/immutable/assets/app.zI_n3zh0.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.BGxmMx2u.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BXfidxto.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DBRwoIs0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.3_zNrIbb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/kd9hGqTx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DNazx179.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CFqmi9YW.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.9Bon8KSW.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B6RKkHEj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/RRjKy-xU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Qloehbhe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Di8HEXA_.js">
@@ -21,24 +21,24 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div><!--[--><!--[--><!----><!----><div class="flex min-h-screen w-screen flex-col items-center justify-start gap-10"><div class="sticky top-0 left-0 w-full px-6 py-2"><div class="absolute inset-0 bg-orange-50/40 shadow-lg ring-1 ring-black/5 backdrop-blur-md"></div> <div class="relative z-10 flex w-full items-center justify-between"><h3 class="text-xl font-semibold">lksjgr Portfolio</h3> <select class="select w-max cursor-pointer font-bold"><option value="light" class="text-md font-bold">Light</option><option value="dark" class="text-md font-bold">Dark</option></select><!----></div></div><!----> <h1 class="text-4xl font-bold">Welcome!</h1> <h2 class="text-xl font-bold">I'm Lukas, and this is my portfolio site, hope you like it!</h2><!----> <div class="align-center my-7 grid h-full w-full grid-cols-2"><!--[!--><!--]--><!----> <div role="tooltip" class="text-container mx-auto flex h-full w-2/3 flex-col items-center justify-start pb-8 svelte-2yllb9"><p class="mr-auto mb-3 text-left text-xl font-semibold">About me</p> <ul><li class="text-left font-medium"><strong>Education</strong> <ul class="mt-2"><li class="list-disc text-left font-medium">I finished middle school from Tallinn Kristiine High School - with 4s and 5s and a diploma
-					for representing the school in sports.</li></ul></li> <!--[--><li>...</li><!--]--> <!--[!--><!--]--></ul></div> <button class="h-full w-full"><img src="/your-repo-name/_app/immutable/assets/noortekunst.CXVng86M.png" alt="noorteKunst project" class="w-full object-contain"></button><!----> <!--[!--><!--]--><!----> <button class="h-full w-full"><img src="/your-repo-name/_app/immutable/assets/Untitled.gnc2XEcn.png" alt="StreamList project" class="w-full object-contain"></button> <div class="text-container mx-auto flex h-full w-2/3 flex-col items-center justify-start pb-8 svelte-gjrcvy" role="tooltip"><p class="mr-auto mb-3 text-left text-xl font-semibold">Coding</p> <ul><li class="mb-2 list-disc text-left font-medium"><strong>Python</strong> - For 2 years python programming has been one of my subjects in school,
+					for representing the school in sports.</li></ul></li> <!--[--><li>...</li><!--]--> <!--[!--><!--]--></ul></div> <button class="h-full w-full"><img src="/PortfolioSite/_app/immutable/assets/noortekunst.CXVng86M.png" alt="noorteKunst project" class="w-full object-contain"></button><!----> <!--[!--><!--]--><!----> <button class="h-full w-full"><img src="/PortfolioSite/_app/immutable/assets/Untitled.gnc2XEcn.png" alt="StreamList project" class="w-full object-contain"></button> <div class="text-container mx-auto flex h-full w-2/3 flex-col items-center justify-start pb-8 svelte-gjrcvy" role="tooltip"><p class="mr-auto mb-3 text-left text-xl font-semibold">Coding</p> <ul><li class="mb-2 list-disc text-left font-medium"><strong>Python</strong> - For 2 years python programming has been one of my subjects in school,
 			so I know it the best.</li> <!--[--><li>...</li><!--]--> <!--[!--><!--]--></ul></div><!----> <!--[!--><!--]--><!----> <div class="text-container mx-auto flex h-full w-2/3 flex-col items-center justify-start pb-8" role="tooltip"><p class="mr-auto mb-3 text-left text-xl font-semibold">Projects</p> <p><strong>You can see the projects all around the page, but here's a quick overview. (you can also click
 			on the pictures to bring up a description)</strong></p> <ul class="my-2"><li class="mb-2 list-disc text-left font-medium"><strong>noorteKunst</strong> - first ever big project, with the aim to learn HTML, CSS and Javascript
 			and build my student company noorteKunst. Site itself is a art gallery/social media for young starting
-			artists, to help them get started and get known in the art industry, grow their portfolio etc.</li> <!--[--><li>...</li><!--]--> <!--[!--><!--]--></ul></div> <button class="h-full w-full"><img src="/your-repo-name/_app/immutable/assets/termnotes.Bocim3cR.png" alt="termnotes project" class="w-full object-contain"></button><!----> <!--[!--><!--]--><!----> <button class="h-full w-full"><img src="/your-repo-name/_app/immutable/assets/terminalport.DQUxHj2a.png" alt="terminalport project" class="h-4/5 w-full object-contain"></button> <div class="mx-auto inline-block h-full w-2/3 pb-8"><p class="mr-auto mb-3 text-left text-xl font-semibold">Socials</p> <ul><li class="mb-2 list-disc text-left font-medium"><strong>Instagram</strong> - <a href="https://www.instagram.com/lucomic/" target="_blank" class="text-rose-400">LuComic</a></li> <li class="mb-2 list-disc text-left font-medium"><strong>Github</strong> - <a href="https://github.com/LuComic" target="_blank" class="text-rose-400">LuComic</a></li> <li class="list-disc text-left font-medium"><strong>Facebook</strong> - <a href="https://www.facebook.com/profile.php?id=100032004948809" target="_blank" class="text-rose-400">Lukas Jääger</a></li></ul></div><!----></div><!----></div><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+			artists, to help them get started and get known in the art industry, grow their portfolio etc.</li> <!--[--><li>...</li><!--]--> <!--[!--><!--]--></ul></div> <button class="h-full w-full"><img src="/PortfolioSite/_app/immutable/assets/termnotes.Bocim3cR.png" alt="termnotes project" class="w-full object-contain"></button><!----> <!--[!--><!--]--><!----> <button class="h-full w-full"><img src="/PortfolioSite/_app/immutable/assets/terminalport.DQUxHj2a.png" alt="terminalport project" class="h-4/5 w-full object-contain"></button> <div class="mx-auto inline-block h-full w-2/3 pb-8"><p class="mr-auto mb-3 text-left text-xl font-semibold">Socials</p> <ul><li class="mb-2 list-disc text-left font-medium"><strong>Instagram</strong> - <a href="https://www.instagram.com/lucomic/" target="_blank" class="text-rose-400">LuComic</a></li> <li class="mb-2 list-disc text-left font-medium"><strong>Github</strong> - <a href="https://github.com/LuComic" target="_blank" class="text-rose-400">LuComic</a></li> <li class="list-disc text-left font-medium"><strong>Facebook</strong> - <a href="https://www.facebook.com/profile.php?id=100032004948809" target="_blank" class="text-rose-400">Lukas Jääger</a></li></ul></div><!----></div><!----></div><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_2cbv9z = {
+					__sveltekit_6rnrbn = {
 						base: new URL(".", location).pathname.slice(0, -1),
-						assets: "/your-repo-name"
+						assets: "/PortfolioSite"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BXfidxto.js"),
-						import("./_app/immutable/entry/app.9Bon8KSW.js")
+						import("./_app/immutable/entry/start.3_zNrIbb.js"),
+						import("./_app/immutable/entry/app.B6RKkHEj.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
