--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 		
 		<link href="./_app/immutable/assets/app.zI_n3zh0.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.BGxmMx2u.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.3_zNrIbb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/kd9hGqTx.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CtzquMa2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BLeJzgR4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DNazx179.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CFqmi9YW.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B6RKkHEj.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C6Y_Z_qv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/RRjKy-xU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Qloehbhe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Di8HEXA_.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_6rnrbn = {
+					__sveltekit_h10ct9 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/PortfolioSite"
 					};
@@ -37,8 +37,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.3_zNrIbb.js"),
-						import("./_app/immutable/entry/app.B6RKkHEj.js")
+						import("./_app/immutable/entry/start.CtzquMa2.js"),
+						import("./_app/immutable/entry/app.C6Y_Z_qv.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
